--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; GoldenCMS 2016</span>
                 </div>
-                <!--<div class="col-md-4">
+                <div class="col-md-4">
+<!--
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -238,16 +239,17 @@
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
+-->
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
+<!--
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+-->
+                        <li><a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html" target="_blank">Edit this page!</a></li>
                     </ul>
                 </div>
-				-->
             </div>
         </div>
     </footer>
