--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Participation</a>
                     </li>
                 </ul>
             </div>
@@ -209,7 +209,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">We need </h2>
+                    <h2 class="section-heading">We Need Your Participation!</h2>
                     <h3 class="section-subheading text-muted">The GoldenCMS is an open source PHP CMS and CMF (Content Management Framework). To developing the system we avoid application complexity and try to make everything simple for Users, Developers, Extenders and Designer. We use Fat-Free Framework as a great miny framework in back of our Content Management Framework. If you like to contribute in developing this project, We offer the Source Open for everyone on Github. You can </h3>
                 </div>
             </div>
@@ -230,16 +230,14 @@
                     <span class="copyright">Copyright &copy; GoldenCMS 2016</span>
                 </div>
                 <div class="col-md-4">
-<!--
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
+					
+                        <li><a href="https://github.com/parsmizban/GoldenCMS" target="_blank"><i class="fa fa-github"></i></a></li>
+<!--
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 -->
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
