--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
 					
-                        <li><a href="https://github.com/parsmizban/GoldenCMS" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://github.com/parsmizban/GoldenCMS" title="Visit GoldenCMS on GitHub!" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://github.com/parsmizban/GoldenCMS/zipball/master" title="Download .zip" target="_blank"><i class="fa fa-file-archive-o"></i></a></li>
+                        <li><a href="https://github.com/parsmizban/GoldenCMS/tarball/master" title="Download .tar.gz" target="_blank"><i class="fa fa-download"></i></a></li>
 <!--
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
