--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Participation</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://github.com/parsmizban/GoldenCMS/zipball/master">Download</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
