--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@
                         <a class="page-scroll" href="#ourway">Our Way</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#team">Participation</a>
                     </li>
                     <li>
@@ -213,19 +210,17 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">We Need Your Participation!</h2>
-                    <h3 class="section-subheading text-muted">The GoldenCMS is an open source PHP CMS and CMF (Content Management Framework). To developing the system we avoid application complexity and try to make everything simple for Users, Developers, Extenders and Designer. We use Fat-Free Framework as a great miny framework in back of our Content Management Framework. If you like to contribute in developing this project, We offer the Source Open for everyone on Github. You can </h3>
+                    <h3 class="section-subheading text-muted">The GoldenCMS is an open source PHP CMS and CMF (Content Management Framework). To developing the system, we avoid application complexity and try to make everything simple for Users, Developers, Extenders and Designer. We use Fat-Free Framework as a great miny framework in back of our Content Management Framework.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">If you like to contribute in developing this project, We offer the Source as Open for everyone on Github. We have an Open Team which every contributors are welcome!<br />You can even <a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html">edit this page!</a> or <a href="https://github.com/parsmizban/GoldenCMS/tree/gh-pages">Fork it on GitHub!</a></p>
                 </div>
             </div>
         </div>
     </section>
 	
-
-
     <footer>
         <div class="container">
             <div class="row">
@@ -245,12 +240,13 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
+                    <ul class="list-inline social-buttons">
 <!--
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms of Use</a></li>
 -->
-                        <li><a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html" target="_blank">Edit this page!</a></li>
+						<li><a href="https://github.com/parsmizban/GoldenCMS/tree/gh-pages" target="_blank" title="Fork this page on GitHub!"><i class="fa fa-code-fork"></i></a></li>
+						<li><a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html" target="_blank" title="Edit this page on GitHub!"><i class="fa fa-pencil-square-o"></i></a></li>
                     </ul>
                 </div>
             </div>
