--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#structure">Structure</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#ourway">Our Way</a>
                     </li>
                     <li>
@@ -166,6 +169,32 @@
         </div>
     </section>
 
+    <!-- Structure Section -->
+    <section id="structure">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">GoldenCMS Structure</h2>
+                    <h3 class="section-subheading text-muted">Great Base for Great Future!</h3>
+                </div>
+            </div>
+            <div class="row text-center">
+<img src="img/dir-structure.jpg" class="img-responsive img-thumbnail" alt="Directory Structure">
+<div class="well topbottonmargin"><strong class="text-center">GoldenCMS has a great flexible directory strucuture for managing file system. This structure contains: </strong>
+  <div class="list-group">
+    <p class="list-group-item-text topbottonmargin text-left"><strong>ROOT:</strong> The root directory contains the main index of the site, Which loads our web site, You can define your root directory in any place, Relax to define it in any subdomain, sub folder or ..., But it is under your root of web-site to initialize site!</p>
+    <p class="list-group-item-text topbottonmargin text-left"><strong>CMS:</strong> CMS directory contains all created data of an site instance, This directory can be inaccesible to visitors and you can move it to any place, for example outside of public_html or ..., You can have another instance of cms folder in other directories too, For example to starting a new sub site or such things!</p>
+    <p class="list-group-item-text topbottonmargin text-left"><strong>PUBLIC:</strong> Public directory contains all files which should be accessible to visitors, including all images, css, javascripts, icons, medias, etc. You can put public directory in any place, But all files path will include in loaded files.</p>
+    <p class="list-group-item-text text-left"><strong>CMF:</strong> CMF directory is the srorage of our core files, It can be in an inaccessible directory, It contains all modules, libraries, everything related to processing the flow of site.</p>
+</div>
+
+
+</div>
+		  </div>
+        </div>
+    </section>
+
+	
     <!-- Our Way Section -->
     <section id="ourway">
         <div class="container">
@@ -210,12 +239,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">We Need Your Participation!</h2>
-                    <h3 class="section-subheading text-muted">The GoldenCMS is an open source PHP CMS and CMF (Content Management Framework). To developing the system, we avoid application complexity and try to make everything simple for Users, Developers, Extenders and Designer. We use Fat-Free Framework as a great miny framework in back of our Content Management Framework.</h3>
+                    <h3 class="section-subheading text-muted">GoldenCMS is an open source PHP CMS and CMF (Content Management Framework). To developing the system, we avoid application complexity and try to make everything simple for Users, Developers, Extenders and Designer. We use Fat-Free Framework as a great miny framework in back of our Content Management Framework.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">If you like to contribute in developing this project, We offer the Source as Open for everyone on Github. We have an Open Team which every contributors are welcome!<br />You can even <a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html">edit this page!</a> or <a href="https://github.com/parsmizban/GoldenCMS/tree/gh-pages">Fork it on GitHub!</a></p>
+                    <p class="large text-muted">If you like to contribute in developing this project, We offer the Source as Open for everyone on Github. We have an Open Team which every contributors are welcome!<br />You can even <a href="https://github.com/parsmizban/GoldenCMSSite/edit/gh-pages/index.html">edit this page!</a> or <a href="https://github.com/parsmizban/GoldenCMSSite/tree/gh-pages">Fork it on GitHub!</a></p>
                 </div>
             </div>
         </div>
@@ -245,8 +274,8 @@
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms of Use</a></li>
 -->
-						<li><a href="https://github.com/parsmizban/GoldenCMS/tree/gh-pages" target="_blank" title="Fork this page on GitHub!"><i class="fa fa-code-fork"></i></a></li>
-						<li><a href="https://github.com/parsmizban/GoldenCMS/edit/gh-pages/index.html" target="_blank" title="Edit this page on GitHub!"><i class="fa fa-pencil-square-o"></i></a></li>
+						<li><a href="https://github.com/parsmizban/GoldenCMSSite/tree/gh-pages" target="_blank" title="Fork this page on GitHub!"><i class="fa fa-code-fork"></i></a></li>
+						<li><a href="https://github.com/parsmizban/GoldenCMSSite/edit/gh-pages/index.html" target="_blank" title="Edit this page on GitHub!"><i class="fa fa-pencil-square-o"></i></a></li>
                     </ul>
                 </div>
             </div>
