--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="page-scroll" href="#team">Participation</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/docs">Documents</a>
+                        <a class="page-scroll" href="./docs">Documents</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="https://github.com/parsmizban/GoldenCMS/zipball/master">Download</a>
