--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         <li><a href="https://github.com/parsmizban/GoldenCMS" title="Visit GoldenCMS on GitHub!" target="_blank"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://github.com/parsmizban/GoldenCMS/zipball/master" title="Download .zip" target="_blank"><i class="fa fa-file-archive-o"></i></a></li>
                         <li><a href="https://github.com/parsmizban/GoldenCMS/tarball/master" title="Download .tar.gz" target="_blank"><i class="fa fa-download"></i></a></li>
-						<li><a href="https://goldencms.com/license.txt" title="GoldenCMS License" target="_blank"><i class="fa fa-certificate"></i></a></li>
+						<li><a href="http://goldencms.com/license.txt" title="GoldenCMS License" target="_blank"><i class="fa fa-certificate"></i></a></li>
 <!--
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
