--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; GoldenCMS 2016</span>
+                    <span class="copyright">Copyright &copy; GoldenCMS Y</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
